# multithreadingNew

./: CMakeLists.txt  makefile
include/: Fork.h  NcursesShower.h  Philosopher.h  State.h
src/: Fork.cpp  NcursesShower.cpp  Philosopher.cpp  main.cpp
